plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.4'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'jacoco'
}

group = 'com'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(23)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	//spring
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	//persistence
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	runtimeOnly 'org.postgresql:postgresql'

	//test
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	//djl
	implementation 'ai.djl:api:0.31.1'
	implementation 'ai.djl.pytorch:pytorch-engine:0.31.1'
	implementation 'ai.djl.pytorch:pytorch-model-zoo:0.31.1'
	// implementation 'com.opencsv:opencsv:5.9'
	implementation 'org.apache.httpcomponents:httpclient:4.5.14'
	implementation 'org.apache.httpcomponents:httpcore:4.4.16'
	testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'

	// caching
	implementation 'org.springframework.boot:spring-boot-starter-cache'
	implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'

	//other
	implementation 'com.google.code.gson:gson:2.13.1'
	implementation 'org.apache.httpcomponents:httpclient:4.5.13'



}
//exclude common logging to get rid of error message at startup: https://stackoverflow.com/a/78538132
configurations.implementation {
	exclude group: 'commons-logging', module: 'commons-logging'
}

tasks.named('test') {
	useJUnitPlatform()
	finalizedBy jacocoTestReport
}
jacocoTestReport {
	dependsOn test
	reports {
		html.required = true
	}
}
